login and register working

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,6 +1,6 @@
 <h2>Log In</h2>
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ login_form }}
   <button type="submit">Log In</button>
 </form>
