--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,6 @@
   <p><a href="{% url 'account_logout' %}">Log Out</a></p>
 {% else %}
   <p>You are not logged in</p>
-  <a href="{% url 'account_login' %}">Log In</a> |
-  <a href="{% url 'account_signup' %}">Sign Up</a>
+  <a href="{% url 'login' %}">Log In</a> |
+  <a href="{% url 'register' %}">Sign Up</a>
 {% endif %}
